<resources>
    <string name="app_name">PracticeApp</string>
    <string name="watched">Просмотрено:</string>
    <string name="number_of_lessons">Уроки:</string>
    <string name="progress">Progress</string>
    <string name="calculate">calculate</string>
    <string name="all_lessons">Выпущенные уроки</string>
    <string name="watched_lessons">Просмотренные уроки</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="email_enter">Email</string>
    <string name="password_enter">Password</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="name_enter">Name</string>
    <string name="done">Done</string>
    <string name="question">What do you want?</string>
    <string name="salary">Your salary:</string>
    <string name="salary_enter">Enter your salary</string>
    <string name="convert">Convert</string>
    <string name="crypto">Enter % of profit and price of the coin</string>
    <string name="profit">Profit</string>
    <string name="lesson_learned">% Learned</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>